--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,20 @@
 <p id="notice"><%= notice %></p>
+<h2 class="display-2"></h2>
+<p>
+  Name: <%= @user.name %>
+</p> 
+<p>
+  Email: <%= @user.email %>
+</p>
+<p>
+  Homeplanet: <%= @user.homeplanet %>
+</p>
+<p>
+  Birthday: <%= @user.birthday %>
+</p>
+<p>
+  Picture <%= @user.picture %>
+</p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
