--- a/app/views/colonies/edit.html.erb
+++ b/app/views/colonies/edit.html.erb
@@ -1,6 +1,14 @@
-<h1>Editing Colony</h1>
+<div class="row text-center">
+  <div class="col-12">
+    <h1>Editing Colony</h1>
+  </div>
+</div>
 
 <%= render 'form', colony: @colony %>
 
-<%= link_to 'Show', @colony %> |
-<%= link_to 'Back', colonies_path %>
+<div class="row text-center">
+  <div class="col-12">
+    <%= link_to 'Show', @colony, :class => "btn btn-info" %>
+    <%= link_to 'Back', colonies_path, :class => "btn btn-warning" %>
+  </div>
+</div>
