--- a/app/assets/stylesheets/colonies.scss
+++ b/app/assets/stylesheets/colonies.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the colonies controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.g-map-show-colony{
+  height: 60vh;
+}
