--- a/app/views/colonies/show.html.erb
+++ b/app/views/colonies/show.html.erb
@@ -1,11 +1,21 @@
-<div class="row">
+<div class="row d-flex text-center justify-content-center flex-column align-items-center">
   <div class="col-6">
     <p id="notice"><%= notice %></p>
-    <h2><%= @colony.name %></h2>    
-    <p>Latitude: <%= @colony.lat %></p>
-    <p>Longitude: <%= @colony.lng %></p>
+    <h1 class="display-4"><%= @colony.name %></h2>    
+      <div class="col-12 d-flex justify-content-between">
+        <p>Latitude: <%= @colony.lat %>, </p>
+        <p>Longitude: <%= @colony.lng %></p>
+      </div>
   </div>
+
+<div class="g-map-show-colony hello">
+<p>
+  G-MAP HERE :)
+</p>
 </div>
 
-<%= link_to 'Edit', edit_colony_path(@colony) %> |
-<%= link_to 'Back', colonies_path %>
+<div class="col-6">
+  <%= link_to 'Edit', edit_colony_path(@colony), :class => "btn btn-info" %>
+  <%= link_to 'Back', colonies_path, :class => "btn btn-warning" %>
+</div>
+</div>
