--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,4 +12,7 @@
   <body>
     <%= yield %>
   </body>
+  <script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBcAYwR_Aino4zgyOIdzr5FFIBlpI3xYqA&callback=initMap">
+  </script>
 </html>
