Added json builder for fetching colonies data

--- a/app/views/colonies/show.html.erb
+++ b/app/views/colonies/show.html.erb
@@ -3,7 +3,7 @@
     <p id="notice"><%= notice %></p>
     <h1 class="display-4"><%= @colony.name %></h2>    
       <div class="col-12 d-flex justify-content-between">
-        <p>Latitude: <%= @colony.lat %>, </p>
+        <p>Latitude: <%= @colony.lat %></p>
         <p>Longitude: <%= @colony.lng %></p>
       </div>
   </div>
