--- a/app/assets/stylesheets/colonies.scss
+++ b/app/assets/stylesheets/colonies.scss
@@ -2,5 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .g-map-show-colony{
+  width: 100vw;
   height: 60vh;
+  position: absolute;
+  bottom: 0;
 }
