Added mission status and decorated it.

--- a/app/views/missions/_form.html.erb
+++ b/app/views/missions/_form.html.erb
@@ -13,6 +13,7 @@
 
   <div class="actions">
     <%= form_for @mission do |mission_form| %>
+      <%= mission_form.select :status, @mission.pretty_statuses %><br> 
       <%= mission_form.text_field :name, placeholder: "Name"%><br>
       <%= mission_form.text_field :description, placeholder: "Description" %><br>
       <%= mission_form.select :aim, Mission.aims.keys, {} %><br>
