Improve logout button in dropdown menu

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,14 +2,20 @@
   <a class="navbar-brand" href="#"><h1>Colony W</h1></a>
 
   <div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <% if user_signed_in? %>
+      <div>
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     User Account
-  </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <%= link_to "My Profile", { controller: "users" }, class: "dropdown-item" %>
-    <%= link_to "Map", { controller: "colonies" }, class: "dropdown-item" %>
-    <%= link_to "Settings", "#", class: "dropdown-item" %>
-    <%= link_to "Log out", "#", class: "dropdown-item" %>
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <%= link_to "My Profile", user_path(current_user), class: "dropdown-item" %>
+            <%= link_to "Map", { controller: "colonies" }, class: "dropdown-item" %>
+            <%= link_to "Settings", "#", class: "dropdown-item" %>
+            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+        </div>
+      </div>
+    <% else %>
+      <button type="button" class="textbutton">Please log in to your account!</button>
+    <% end %>
   </div>
-</div>
 </nav>
