--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,7 @@
+.navbar h1 a {
+    color: white;
+}
+
 @import "bootstrap";
 
 body { 
@@ -5,3 +9,4 @@ body {
     font-size: 18px;
     font-family: 'sans-serif', 'Oxygen';
 }
+
