--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark bg-primary" style="background-color: #e3f2fd;">
-  <a class="navbar-brand" href="#"><h1>Colony W</h1></a>
+  <h1><%= link_to "Colonizer", root_path %></h1>
 
   <div class="dropdown">
     <% if user_signed_in? %>
