--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,12 +1,12 @@
-.navbar h1 a {
-    color: white;
+h1 a {
+  color: #ffffff;
 }
 
 @import "bootstrap";
 
 body { 
     // padding-top: 60px;
-    font-size: 18px;
-    font-family: 'sans-serif', 'Oxygen';
+  font-size: 18px;
+  font-family: 'sans-serif', 'Oxygen';
 }
 
