Improve navbar headline

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,12 +1,14 @@
-h1 a {
-  color: #ffffff;
-}
-
 @import "bootstrap";
+
+$white-link: #ffffff;
+
+.nav-headline {
+  color: $white-link;
+}
 
 body { 
     // padding-top: 60px;
   font-size: 18px;
-  font-family: 'sans-serif', 'Oxygen';
+  font-family: "Arial";
 }
 
