--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark bg-primary" style="background-color: #e3f2fd;">
-  <h1><%= link_to "Colonizer", root_path %></h1>
+  <h1><%= link_to "Colonizer", root_path, class: "nav-headline" %></h1>
 
   <div class="dropdown">
     <% if user_signed_in? %>
