--- a/app/assets/stylesheets/colonies.scss
+++ b/app/assets/stylesheets/colonies.scss
@@ -2,8 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .g-map-show-colony {
-  bottom: 0;
-  height: 60vh;
-  position: absolute;
-  width: 100vw;
+  height: 100vh;
+  width: 50vw;
+}
+.colonies-col {
+  height: 100vh;
 }
