fixed missions form

--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -8,7 +8,7 @@
 <br>
 <div>
 	<p>
-		<%= "Mission captain: #{@mission.captain}" %>
+		<%= "Mission captain: #{@mission.captain.name}" %>
 	</p>
 </div>
 <br>
@@ -19,7 +19,7 @@
 </div><br>
 <div>
 	<p>
-		<%= "Mission name: #{@mission.name}" %>
+		<%= "Mission description: #{@mission.description}" %>
 	</p>
 </div>
 
