--- a/app/views/missions/_form.html.erb
+++ b/app/views/missions/_form.html.erb
@@ -1,25 +1,17 @@
-<%= form_with(model: mission, local: true) do |form| %>
-  <% if mission.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(mission.errors.count, "error") %> prohibited this mission from being saved:</h2>
-
-      <ul>
-      <% mission.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="actions">
-    <%= form_for @mission do |mission_form| %>
-      <%= mission_form.select :status, @mission.pretty_statuses %><br> 
-      <%= mission_form.text_field :name, placeholder: "Name"%><br>
-      <%= mission_form.text_field :description, placeholder: "Description" %><br>
-      <%= mission_form.select :aim, Mission.aims.keys, {} %><br>
-
-    <% end %>
-
-    <%= form.submit %>
+<% if @mission.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(mission.errors.count, "error") %> prohibited this mission from being saved:</h2>
+    <ul><% mission.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %></ul>
   </div>
 <% end %>
+<div class="actions">
+  <%= form_for @mission do |mission_form| %>
+    <%= mission_form.select :status, @mission.pretty_statuses %><br> 
+    <%= mission_form.text_field :name, placeholder: "Name"%><br>
+    <%= mission_form.text_field :description, placeholder: "Description" %><br>
+    <%= mission_form.select :aim, Mission.aims.keys, {} %><br>
+    <%= mission_form.submit %>
+  <% end %>
+</div>
