--- a/app/views/colonies/show.html.erb
+++ b/app/views/colonies/show.html.erb
@@ -8,11 +8,7 @@
       </div>
   </div>
 
-<div class="g-map-show-colony hello">
-<p>
-  G-MAP HERE :)
-</p>
-</div>
+  <div id="g-map-index" class="g-map-show mb-3 mt-3"></div>
 
 <div class="col-6">
   <%= link_to 'Edit', edit_colony_path(@colony), :class => "btn btn-info" %>
