--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,9 @@
 
   <body>
     <%= render "shared/navbar" %>
-    <%= yield %>
+    <div class='col-md-12'>
+      <%= yield %>
+    </div>
   </body>
   <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBcAYwR_Aino4zgyOIdzr5FFIBlpI3xYqA&callback=initMap">
