--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,33 +1,28 @@
-<div>
-  <center>
+<div class="mx-auto" style="width: 400px;">
   <h2>Sign up</h2>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
 
-    <div class="field">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <div class="form-group">
+      <%= f.label :email %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
     </div>
 
-    <div class="field">
-      <%= f.label :password %> <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-      <% if @minimum_password_length %>
-      
-      <% end %>
-      <%= f.password_field :password, autocomplete: "off" %>
+    <div class="form-group">
+      <%= f.label :password %> <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
     </div>
 
-    <div class="field">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <div class="form-group">
+      <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
     </div>
 
     <div class="actions">
-      <%= f.submit "Sign up" %>
+      <%= f.submit "Sign up", class: "btn btn-primary" %>
     </div>
   <% end %>
 
-<%= render "devise/shared/links" %>
-  </center>
+  <%= render "devise/shared/links" %>
 </div>
