--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <%= render "shared/navbar" %>
-    <div class='col-md-12'>
+    <div class="container-fluid">
       <%= yield %>
     </div>
   </body>
