Moved some stuff around

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,6 +12,9 @@
 <p>
   Birthday: <%= @user.birthday %>
 </p>
+<p>
+  Missions: <%= @user.missions %>
+</p>
 <% if !@user.picture.blank? %>
 <p>
   Picture 
