--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -25,5 +25,6 @@
 
 
 
-<%= link_to 'Edit', edit_mission_path(@mission) %> |
+<%= link_to 'Edit', edit_mission_path(@mission) %>
+<%= link_to 'Destroy', @mission, method: :delete, data: { confirm: 'Are you sure?' } %>
 <%= link_to 'Back', missions_path %>
