--- a/app/assets/stylesheets/font-families.scss
+++ b/app/assets/stylesheets/font-families.scss
@@ -1,2 +1,2 @@
 @import url('https://fonts.googleapis.com/css?family=Coda+Caption:800');
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Lato:300,300i,400,700,700i');
