--- a/app/views/colonies/new.html.erb
+++ b/app/views/colonies/new.html.erb
@@ -1,12 +1,12 @@
 <div class="row text-center">
-  <div class="col-12">
+  <div class="col-6">
     <h1>New Colony</h1>
+    <%= render 'form', colony: @colony %>
+    <div class="col-12">
+      <%= link_to 'Back', colonies_path, :class => "btn btn-warning" %>
+    </div>
   </div>
-</div>
-<%= render 'form', colony: @colony %>
-
-<div class="row text-center">
-  <div class="col-12">
-    <%= link_to 'Back', colonies_path, :class => "btn btn-warning" %>
+  <div class="col-6">
+    <div id="g-map-index" class="g-map-show-colony"></div>
   </div>
 </div>
