Fixed missions index view

--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
+<%= link_to "New Mission", new_mission_path, class: "btn btn-outline-secondary float-right" %><br>
 
-<h1>Missions</h1>
+<h1 class="badge badge-secondary">Missions</h1><br>
 
 <table>
   <thead>
@@ -19,4 +20,3 @@
 
 <br>
 
-<%= link_to 'New Mission', new_mission_path %>
