--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -1,30 +1,11 @@
 <p id="notice"><%= notice %></p>
-
-<div>
-	<p>
-		<%= "Mission name: #{@mission.name}" %>
-	</p>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <%= link_to 'Destroy', @mission, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-danger float-right" %>
+  	<%= link_to 'Edit', edit_mission_path(@mission), class: "btn btn-outline-success float-right" %>
+    <h1 class="display-4"><%= @mission.name %><span class="badge badge-dark"><%= @mission.aim %></span></h1>
+    <h3 class="display-8"><%= "Mission captain: #{@mission.captain.name}" %></h3>
+    <p class="lead"><%= "Mission description: #{@mission.description}" %> </p>    
+  </div>
 </div>
-<br>
-<div>
-	<p>
-		<%= "Mission captain: #{@mission.captain.name}" %>
-	</p>
-</div>
-<br>
-<div>
-	<p>
-		<%= "Mission aim: #{@mission.aim}" %>
-	</p>
-</div><br>
-<div>
-	<p>
-		<%= "Mission description: #{@mission.description}" %>
-	</p>
-</div>
-
-
-
-<%= link_to 'Edit', edit_mission_path(@mission) %>
-<%= link_to 'Destroy', @mission, method: :delete, data: { confirm: 'Are you sure?' } %>
-<%= link_to 'Back', missions_path %>
+<%= link_to 'Back', missions_path, class: "btn btn-outline-secondary" %>
