--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "colonies";
 @import "font-families";
 
+$background-color: #111;
 $white-link: #ffffff;
 
 h1 {
@@ -9,6 +10,7 @@ h1 {
 }
 
 body {
+  background-color: $background-color;
   font-family: 'Lato', sans-serif;
   font-size: 18px;
 }
