--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,7 +1,7 @@
-<h1>Missions listing</h1>
+<h1>My Missions</h1>
 
 <% @missions.each do |mission| %>
   <ul><%= link_to mission.name, mission %></ul>
 <% end %>
 
-<%= link_to "Create mission", new_mission_path %>
+<%= link_to "Create mission", new_mission_path, class: "btn btn-primary" %>
