--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,7 +1,20 @@
-<h1>My Missions</h1>
+<%= link_to "New Mission", new_mission_path, class: "btn btn-outline-secondary float-right" %><br>
 
-<% @missions.each do |mission| %>
-  <ul><%= link_to mission.name, mission %></ul>
-<% end %>
+<h1 class="badge badge-secondary">Missions</h1><br>
 
-<%= link_to "Create mission", new_mission_path, class: "btn btn-primary" %>
+<table>
+  <thead>
+    <tr>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <div class="container">
+    <% @missions.each do |mission| %>
+      <ul class="list-group">
+        <li class="list-group-item list-group-item-light"><%= link_to mission.name, mission, class: "btn" %></li>
+      </ul>
+    <% end %>
+</div>
+
+<br>
